[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/Elements/Buttons/ButtonGreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menus/RecyclerView/GameItem.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="GameItem" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -448.0
margin_bottom = -512.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameNameLabel" type="Label" parent="."]
margin_left = 32.0
margin_top = 16.0
margin_right = 480.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "Holaaa"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Button" parent="." instance=ExtResource( 2 )]
margin_left = 440.0
margin_top = 12.0
margin_right = 369.536
margin_bottom = 41.312

[node name="ButtonText" parent="Button" index="0"]
margin_left = 0.0
margin_top = 0.0
margin_right = 96.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Join"
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[editable path="Button"]
